# originalang

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  constants.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppToolbar.tsx  BulkWordImportModal.tsx  EntityManagerModal.tsx  ExamplesEditor.tsx  ResetDictionaryModal.tsx  WordComponentsEditor.tsx  WordEditorPane.tsx  WordListPane.tsx
src/lib/: build-formatters.ts  build-part-files.ts  build-types.ts  build.ts  bulk-import.ts  db.ts  dictionary-file-actions.ts  dictionary-taxonomy-actions.ts  etymology.ts  repository-io.ts  repository-mutations.ts  repository-queries.ts  repository-shared.ts  repository.ts  semantic-search.ts  utils.ts  word-editor.ts
