[package]
name = "originalang-dictionary"
version = "0.1.0"
description = "Local dictionary manager for constructed language data"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "originalang_dictionary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

